# bgp_qnm_fits

./: .flake8  .gitignore  1_simple_demo.ipynb  2_qnm_selecting_demo.ipynb  BGP_fits.py  CCE.py  GP_funcs.py  GP_hyperparams_1.py  GP_hyperparams_2.py  GP_hyperparams_comparisons.ipynb  GP_hyperparams_divergences.ipynb  GP_hyperparams_minimisation.py  GP_hyperparams_param_calcs.py  GP_hyperparams_param_calcs_full.py  GP_hyperparams_residuals.py  GP_kernel_divergences.py  MWE.ipynb  MWE_max.ipynb  MWE_stationary_test.ipynb  MWE_training.ipynb  README.md  R_dict_sim_lm_full.pkl  SXS:BBH_ExtCCE_superrest:0001_Lev5_R2_metadata.json  amplitude_ratios.ipynb  corner_plot_comparison.ipynb  demo.ipynb  f_dict_sim_lm.pkl  f_dict_sim_lm_full.pkl  get_kernel_params.py  get_kernel_params_alt.ipynb  gp_kernal_construction.ipynb  gp_kernal_plots.ipynb  likelihood_funcs.py  ls_vs_white_noise.ipynb  method_plots.ipynb  param_dict_sim_lm.pkl  param_dict_sim_lm_full.pkl  param_dict_sim_lm_full_old.pkl  power_law_tail_fits.py  power_law_tail_fits_jax.py  (+12 more)
archive/: method_plots_1.ipynb
bayes_qnm_GP_likelihood/: BGP_fits.py  CCE_RD.py  GP_funcs.py  __init__.py  get_kernel_params.py  kernel_param_funcs.py  likelihood_funcs.py  power_law_tail_fits.py  qnm_selecting_funcs.py  tuned_params.pkl  utils.py
bgp_qnm_fits/: C_mixing_coefficients.pkl  C_mixing_test.ipynb  Cmus.pkl  GP_funcs.py  PLT_fit.py  Qmus_0010_C.pkl  __init__.py  base_fit.py  cubic_mixing_test.py  get_C_mixing.py  get_cubic_mixing.py  gp_kernels.py  gp_training.py  kernel_param_funcs.py  main_fit.py  main_fit_lite.py  plt_fit.py  power_law_tail_fits_jax.py  qnm_funcs.py  qnm_selecting_funcs.py  qnmfits_funcs.py  select_fit.py  utils.py  (+1 more)
(+67 files in other folders)
