[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgp_qnm_fits"
version = "0.0.1"
authors = [
  { name = "Richard Dyer", email = "richard.dyer@ast.cam.ac.uk" }
]
description = "Bayesian Gaussian Process fitting of quasinormal modes to CCE ringdown waveforms"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jax",
    "pickle",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/richardvnd/bgp_qnm_fits"