[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgp_qnm_fits"
version = "0.0.1"
authors = [
  { name = "Richard Dyer", email = "richard.dyer@ast.cam.ac.uk" }
]
description = "Bayesian Gaussian Process fitting of quasinormal modes to CCE ringdown waveforms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "jax",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/richardvnd/bgp_qnm_fits"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
